--- a/automations.yaml
+++ b/automations.yaml
@@ -175,7 +175,7 @@
     - choose: 
         - conditions:
             - condition: template
-              value_template: "{{ !trigger.event.data.state }}"
+              value_template: "{{ not trigger.event.data.state }}"
           sequence:
             - service: script.notify
               data_template:
@@ -195,7 +195,7 @@
     - platform: event
       event_type: car_charge_started
   action:
-    - service: "input_boolean.turn_{{ trigger.event.data.state ? 'on' : 'off' }}"
+    - service_template: "input_boolean.turn_{{ trigger.event.data.state ? 'on' : 'off' }}"
       entity_id: input_boolean.car_charging
 
 - id: car_charging
